--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=procurementManagementSystem
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/db01
-spring.datasource.username=root
+spring.datasource.username=
 spring.datasource.password=
 
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
