--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=procurementManagementSystem
 #Datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/db01
-spring.datasource.username=root
-spring.datasource.password=19930211q
+spring.datasource.username=
+spring.datasource.password=
 
 #MyBatis
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
